Sat Jun 16 04:40:28 BST 2007  Olly Betts <olly@survex.com>

	* HACKING: Now using doxygen 1.5.2.

Sat Jun 16 02:08:20 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_table.cc: Fix to build with older zlib.  Not
	  hugely important as zlib security fixes mean any well maintained
	  box will be running a recent zlib, but the fix is trivial.

Fri Jun 15 19:39:03 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* HACKING: Document the new check-void, check-inmemory,
	  check-remoteprog and check-remotetcp targets.

Fri Jun 15 19:34:13 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* Makefile.am,tests/Makefile.am: Add check-void, check-inmemory,
	  check-remoteprog and check-remotetcp targets, to allow the tests
	  for any of the backends to be performed in isolation.

Fri Jun 15 19:29:19 BST 2007  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,xapian-core.spec.in,xapian.spec.in:
	  Rename xapian.spec to xapian-core.spec to match tarball name.
	  Append the user name to BuildRoot.

Fri Jun 15 14:51:13 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* net/progclient.cc: Open the file handle pointing to /dev/null as
	  O_WRONLY instead of O_RDONLY: doesn't affect whether the test
	  passes (since nothing gets written to stderr in theory anyway),
	  but makes more sense.

Fri Jun 15 13:21:56 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* net/progclient.cc: Better fix - rather than leaving stderr open,
	  we close it, and then reopen it pointing to /dev/null.

Fri Jun 15 12:55:07 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* net/progclient.cc: Don't close stderr in the child before we call
	  execve() - with this change, apitest passes under valgrind with
	  the remote database backend: before it, the child seemed to be
	  exiting without writing anything to the socket, causing the test
	  to fail with a NetworkError (due to an unexpected EOF).
