@@ -111,9 +111,10 @@ To run all tests, use "make check".  You can also run just the subset of tests
 which exercise the inmemory, remote progserver, remote TCP, quartz, or flint
 backends using "make check-inmemory", "make check-remoteprog", "make
 check-remotetcp", "make check-quartz", or "make check-flint" respectively.
-Also, "make check-remote" will run the tests on both remote backends, and "make
-check-void" will run those tests which don't use any backend.  These are handy
-shortcuts when doing development work on a particular backend.
+Also, "make check-remote" will run the tests on both variants of the remote
+backend, and "make check-none" will run those tests which don't use any
+backend.  These are handy shortcuts when doing development work on a particular
+backend.
 
 The runtest script (in the tests subdirectory) takes care of the details of
 running the test programs (including setting up the environment so they work
@@ -139,7 +140,7 @@ You can also use runtest to run a test program under gdb (or most other tools):
 ./runtest valgrind ./apitest -v deldoc1
 
 Some test programs take special arguments - for example, you can restrict
-apitest to the flint backend using "-b=flint".
+apitest to the flint backend using "-bflint".
 
 There are a few environmental variables which the testsuite harness checks for
 which you might find useful:
