@@ -1,3 +1,13 @@
+Sat Jun 16 04:42:16 BST 2007  Olly Betts <olly@survex.com>
+
+	* HACKING,Makefile.am,tests/Makefile.am,tests/apitest.cc,
+	  tests/harness/backendmanager.cc,tests/harness/backendmanager.h: In
+	  the testsuite, rename the "void" pseudo-backend to "none" to more
+	  clearly reflect what it is.  And rename the "remote" backend to
+	  "remoteprog", to better differentiate it from "remotetcp".
+	* HACKING: Fix error - "apitest -b=flint" doesn't work - it must be
+	  "apitest -bflint".
+
 Sat Jun 16 04:40:28 BST 2007  Olly Betts <olly@survex.com>
 
 	* HACKING: Now using doxygen 1.5.2.
